--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=CloneMintra-v-0.0.2-2
+spring.application.name=spring_configuration-2
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/abc
+spring.datasource.username=root
+spring.datasource.password=Sunny@123
+
+spring.security.user.name=abcd
+spring.security.user.password=a@123
+
+
+spring.jpa.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.servlet.session.cookie.same-site=strict
